# Email_Alert

./: .gitignore  CMakeLists.txt  README.md
src/: email_alert.cpp  email_alert.py
